[package]
name = "kvs"
version = "0.2.0"
authors = ["Eusebio <eusebiodm98@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
failure = "0.1.5"
serde = "1.0.94"
serde_json = "1.0.40"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false

[[kvs]]
doctest = false
